--- a/install
+++ b/install
@@ -10,3 +10,17 @@ mkdir -p server/
 cp tak-ai/target/tak-ai*.jar trainer/
 cp tak-cli/target/tak-cli*.jar cli/
 cp tak-server/target/tak-server*.jar server/
+
+cd server
+if [ ! -f keystore.p12 ]; then
+    keytool -genkey -noprompt \
+     -alias takserver \
+     -storetype PKCS12 \
+     -keyalg RSA \
+     -keysize 2048 \
+     -keystore keystore.p12 \
+     -validity 3650 \
+     -dname "CN=Tak Server, OU=Tak, O=Leger Faire, L=San Diego, S=CA, C=US" \
+     -storepass takserver \
+     -keypass takserver
+fi
